# gugu-bot

./: .env.prod  .gitignore  README.md  nohup.out  pyproject.toml  requirements.txt  week_summary.csv
.github/workflows/: deploy.yml
src/: config.py  myGlobals.py
src/database/: __init__.py  gugu-B.db  gugu.db  gugu_B.db  nohup.out  query.ipynb
src/plugins/: checkin.py  daily.py  group.py  group_manage.py  gugu_fun.py  gugu_ping.py  individual_manage.py  manage.py  members.py  my_stats.py  ping.py  report.py  rewards.py  summary.py
src/plugins/admin/: __init__.py  report_gen.py  routes.py
src/plugins/admin/templates/: base.html  checkins.html  config.html  index.html  leaves.html  report.html  users.html
